--- a/app/Resources/views/layouts/base.html.twig
+++ b/app/Resources/views/layouts/base.html.twig
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/readable/bootstrap.min.css" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('css/app.css') }}" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+            <link rel="icon" type="image/x-icon" href="{{ asset('favicon.png') }}" />
         {% endblock %}
 
     </head>
