--- a/app/Resources/views/front/index.html.twig
+++ b/app/Resources/views/front/index.html.twig
@@ -41,7 +41,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container info">
             <h2>Informations Pratiques</h2>
             <table class="table table-striped table-hover ">
                 <tbody>
