--- a/app/Resources/views/layouts/base.html.twig
+++ b/app/Resources/views/layouts/base.html.twig
@@ -13,37 +13,14 @@
 
     </head>
     <body>
-        <header>
-            <div class="bkg-header container-fluid">
-                <div class="container">
-                    <div class="row">
-                        <a href="{{ path('visit') }}"><img src="{{ asset('assets/logo.png') }}" height="70"></a>
-                    </div>
-                </div>
-            </div>
-        </header>
+        {% include 'partials/header.html.twig' %}
+        {% include 'partials/info_messages.html.twig' %}
 
         {% block body %}
-            <div class="relative">
-                {% if app.session.flashBag.has('success') %}
-                    <div class="alert alert-success fade in" role="alert">
-                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                        {% for msg in app.session.flashBag.get('success') %}
-                            {{ msg }}
-                        {% endfor %}
-                    </div>
-                {% endif %}
-                {% if app.session.flashBag.has('warning') %}
-                    <div class="alert alert-danger fade in" role="alert">
-                        <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                        {% for msg in app.session.flashBag.get('warning') %}
-                            {{ msg }}
-                        {% endfor %}
-                    </div>
-
-                {% endif %}
-            </div>
         {% endblock %}
+
+        {% include 'partials/footer.html.twig' %}
+
         {% block javascripts %}
             <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
