--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,6 +1,11 @@
 body {
     background-color: #FCFCFC;
     font-family: Helvetica, Arial, sans-serif;
+    height: auto;
+    position: relative;
+}
+html {
+    height: 100%;
 }
 ul li {
     list-style-type: none;
@@ -94,7 +99,12 @@ ul li {
     margin: 0 0 40px 0;
     background-color: #F2F2F2;
 }
-
+.info {
+    padding: 0 0 66px 0px;
+}
+.info h2{
+    margin-bottom: 31px;
+}
 .visit-date-container, .quantity-container, .total-container {
     padding: 20px 20px 12px 20px;
     background-color: #ffffff;
@@ -193,4 +203,22 @@ ul li {
 }
 .information {
     padding: 40px 20px 20px 20px;
+}
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    padding: 20px 0 10px 0;
+    margin: 20px 0 0 0;
+    box-sizing: border-box;
+    background-color: #eaeaea;
+}
+
+
+/* MEDIA QUERIES*/
+@media screen and (max-width: 640px) {
+    #ui-datepicker-div {
+        width: 80%;
+    }
 }
