--- a/app/Resources/views/layouts/base.html.twig
+++ b/app/Resources/views/layouts/base.html.twig
@@ -14,7 +14,7 @@
     </head>
     <body>
         {% include 'partials/header.html.twig' %}
-        {% include 'partials/info_messages.html.twig' %}
+        {% include 'partials/messages.html.twig' %}
 
         {% block body %}
         {% endblock %}
